[package]
name = "soroban_reentrancy_guard"
version = "0.1.0"
edition = "2021"

# Library-only, deliberately: this crate is linked into contracts, never deployed.
# It must not declare `cdylib` and must not contain `#[contractimpl]` entry points —
# under the workspace's fat-LTO release profile those would be pulled into every
# dependent contract's WASM and collide on shared export names such as `init`.
[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "22.0.7"

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
